--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
 		<meta name="description" content="Handmade boilerplate for quickly firing a React JS project">
 		<style>
 			#app-loader{ 
-				display: flex; 
+				display: flex;
+				width: 100%;
 				height: 100vh; 
 				text-align: center; 
 				justify-content: center; 
 				align-items: center; 
-				font-size: 48px; 
-				color: #999;
 				position: absolute;
-				animation: textanimate 1s infinite;
+				animation: textanimate 1500ms infinite;
 			}
 			@keyframes textanimate {
-				0%   {opacity: 0.33; font-size: 16px}
-				100% {opacity: 1.0; font-size: 48px}
+				0%   {font-size: 8px; color: #eee;}
+				100% {font-size: 32px; color: #999}
 			}
 		</style>
 		<link rel="preconnect" href="https://fonts.gstatic.com/" />
